# university-portfolio

./: README.md
cpp/: README.md
cpp/pcc/: README.md  tiny_challenges
cpp/pcc/cppsemestralprjct/: CMakeLists.txt  README.md  game.cpp  game.hpp  generator.cpp  generator.hpp  helper.cpp  helper.hpp  main.cpp  maze.cpp  maze.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp
cpp/pcc/homeworks/: readme.md
cpp/pcc/homeworks/Doubly-Linked-List-Implementation/: list.cpp  list.hpp  readme.md
cpp/pcc/homeworks/JWST-image-decoder/: readme.md  telescope.cpp  telescope.hpp
cpp/pcc/tiny/: readme.md
cpp/pcc/tiny/0/: readme.md  tiny-00.cpp
cpp/tiny/: README.md
cpp/tiny/1/: CMakeLists.txt  tests-tiny-00.cpp
dsa/: readme.md
dsa/hw1/: Maze.java  readme.md
java/: README.md
java/omo/: README.md
java/omo/SmartHome/: README.md
java/omo/homeworks/: readme.md
java/omo/seminar/: readme.md
java/pjv/: README.md
java/pjv/Roadgame/: README.md  log.txt  pom.xml
java/pjv/assignments/: readme.md
nsi/: readme.md
nsi/practice/: bootsel_led_blink.py  readme.md
nsi/practice/pi_serial/: pi_serial_BLINK.py  pi_serial_blinker.py  pi_serial_comm.py
nsi/practice/wokwi/: readme.md
python/: README.md
python/zal/: README.md
python/zal/exam-prep/: README.md  han_is_going_home.py  han_solo.py  homer.py  shield1.py  shld.py  stark1.py  stark2.py
python/zal/homeworks/: README.md
web/: README.md
web/zwa/: README.md
web/zwa/Task Manager/: README.md
zan/: README.md
zan/practise/2/: MainActivity.kt  UserProfileEditor.kt  UserProfileScreen.kt  readme.md
(+342 files in other folders)
